# diesel

./: .travis.yml  CHANGELOG.md  azure-pipelines.yml
diesel/: Cargo.toml
diesel/src/: backend.rs  lib.rs
diesel/src/macros/: mod.rs
diesel/src/mysql/types/: mod.rs
diesel/src/pg/: backend.rs
diesel/src/pg/query_builder/: distinct_on.rs  mod.rs
diesel/src/pg/serialize/: write_tuple.rs
diesel/src/query_builder/: clause_macro.rs  limit_offset_clause.rs  mod.rs
diesel/src/query_builder/select_statement/: boxed.rs  dsl_impls.rs  mod.rs
diesel/src/query_dsl/: join_dsl.rs
diesel/src/query_source/: joins.rs
diesel/src/sql_types/: mod.rs
diesel_cli/src/: database.rs
diesel_cli/src/infer_schema_internals/: information_schema.rs
diesel_compile_tests/: Cargo.toml
diesel_tests/: Cargo.toml
diesel_tests/tests/: joins.rs  types.rs  types_roundtrip.rs
