[package]
name = "diesel_compile_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]

[workspace]

[dependencies]
diesel = { version = "1.4.0", default-features = false, features = ["extras", "sqlite", "postgres", "mysql", "unstable"] }
compiletest_rs = "=0.3.22"

[patch.crates-io]
diesel = { path = "../diesel/" }
diesel_derives = { path = "../diesel_derives" }
